--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Caltech CTME Data Science Bootcamp - 6 Months Data Science Certification Online</title>
-    <!--  -->
+    <!-- favicon -->
+    <link rel="shortcut icon" href="images/caltech_favicon.icoz" type="image/x-icon">
     <!-- jquery carosel link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.css">
