--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="header">
       <div class="container">
         <div class="top_header">
-          <img src="/images/caltech_updated_logo.svgz" alt=""   />
+          <img src="images/header_final-uni-2.svg" alt=""   />
         </div>
       </div>
       <div class="main_header" id="main_header">
